--- a/app/src/main/res/layout/activity_actors.xml
+++ b/app/src/main/res/layout/activity_actors.xml
@@ -26,27 +26,25 @@
                 android:id="@+id/actorsImage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginEnd="4dp"
                 android:scaleType="centerCrop"
                 android:adjustViewBounds="true"
                 app:imageUrl="@{actors.image}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/actorsName"
+                app:layout_constraintTop_toBottomOf="@+id/titleTxt"
                 app:srcCompat="@drawable/ic_face_black_24dp" />
 
             <TextView
-                android:id="@+id/actorsName"
+                android:id="@+id/titleTxt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="8dp"
                 android:gravity="center"
+                android:textColor="@color/colorPrimary"
                 android:text="@{actors.name}"
-                android:textColor="@color/colorBlack"
-                android:textSize="24sp"
+                android:textSize="26sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -100,7 +98,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/partOfPerf" />
 
-
             <ProgressBar
                 android:id="@+id/progressBar"
                 style="?android:attr/progressBarStyle"
@@ -113,7 +110,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/actorsName" />
+                app:layout_constraintTop_toTopOf="@+id/titleTxt" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
