--- a/app/src/main/res/layout/activity_performance_detail.xml
+++ b/app/src/main/res/layout/activity_performance_detail.xml
@@ -44,6 +44,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="8dp"
                 android:gravity="center"
+                android:textColor="@color/colorPrimary"
                 android:text='@{performance.title}'
                 android:textAppearance="?android:textAppearanceLarge"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +86,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="4dp"
-                android:paddingRight="8dp"
                 android:text='@{performance.description}'
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/perf_duration" />
@@ -95,7 +95,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="2dp"
                 android:layout_marginEnd="8dp"
                 android:text="@string/workOnPerf"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
