--- a/app/src/main/res/layout/actors_view_item.xml
+++ b/app/src/main/res/layout/actors_view_item.xml
@@ -48,7 +48,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/itemImage" />
 
             <TextView
-                android:id="@+id/actorsName"
+                android:id="@+id/titleTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
