--- a/app/src/main/res/layout/recycler_fragment.xml
+++ b/app/src/main/res/layout/recycler_fragment.xml
@@ -9,7 +9,7 @@
     tools:context="com.example.teatrnachaynoy.MainActivity">
 
     <ProgressBar
-        android:id="@+id/progressRepertoire"
+        android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -17,13 +17,13 @@
         android:layout_marginEnd="8dp"
         android:color="@color/colorAccent"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/repertoireRecycler"
+        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/repertoireRecycler"
-        app:layout_constraintTop_toTopOf="@+id/repertoireRecycler" />
+        app:layout_constraintStart_toStartOf="@+id/recyclerView"
+        app:layout_constraintTop_toTopOf="@+id/recyclerView" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/repertoireRecycler"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="8dp"
