--- a/app/src/main/res/layout/troupe_item.xml
+++ b/app/src/main/res/layout/troupe_item.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
-            name="repertoire"
-            type="com.example.teatrnachaynoy.Repertoire" />
+            name="troupe" type="com.example.teatrnachaynoy.ActorsInfo" />
     </data>
 
     <androidx.cardview.widget.CardView
@@ -27,30 +25,28 @@
                 android:id="@+id/titleTxt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="4dp"
                 android:gravity="center"
-                android:text='@{repertoire.title}'
+                android:text='@{troupe.name}'
                 android:textAppearance="?android:textAppearanceLarge"
                 android:textColor="@color/titleColor"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/perf_image"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/perf_image"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="8dp"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                app:imageUrl="@{repertoire.image_url}"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:imageUrl="@{troupe.image}"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/titleTxt" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/descTxt"
@@ -59,11 +55,11 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:text='@{(repertoire.description.length() > 200 ? repertoire.description.substring(0, 195) : repertoire.description) + "..."}'
+                android:text='@{(troupe.charecter.length() > 200 ? troupe.charecter.substring(0, 250) : troupe.charecter)  + "..."}'
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/perf_image" />
+                app:layout_constraintStart_toEndOf="@+id/perf_image"
+                app:layout_constraintTop_toBottomOf="@+id/titleTxt" />
 
             <TextView
                 android:id="@+id/textView"
@@ -73,7 +69,6 @@
                 android:text="@string/details"
                 android:textColor="@color/titleColor"
                 android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/descTxt" />
         </androidx.constraintlayout.widget.ConstraintLayout>
